# go2_mjlab

./: .justfile  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: deploy.yml
public/: index.html
src/go2_mjlab/robot/: go2_constants.py
src/go2_mjlab/scripts/: list_envs.py  play.py  record.py  train.py
src/go2_mjlab/tasks/: env_cfgs.py  rl_cfg.py
src/mjlab_go2/robot/: go2_constants.py
src/mjlab_go2/scripts/: list_envs.py  play.py  train.py
src/mjlab_go2/tasks/: __init__.py  env_cfgs.py  rl_cfg.py
